--- a/package.json
+++ b/package.json
@@ -7,33 +7,49 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "check-setup": "node scripts/check-setup.js"
+    "check-setup": "node scripts/check-setup.js",
+    "init-db": "node scripts/init-db.js",
+    "test-db": "node scripts/test-db.js",
+    "debug-db": "node scripts/debug-db.js",
+    "audit-fix": "npm audit fix --force",
+    "setup": "node scripts/setup.js",
+    "clean": "rm -rf .next node_modules package-lock.json && npm install",
+    "create-admin": "node scripts/create-admin.js"
   },
   "dependencies": {
-    "next": "14.0.4",
-    "react": "^18",
-    "react-dom": "^18",
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "tailwindcss": "^3.3.0",
-    "autoprefixer": "^10.0.1",
-    "postcss": "^8",
-    "bcryptjs": "^2.4.3",
-    "@types/bcryptjs": "^2.4.6",
-    "jsonwebtoken": "^9.0.2",
-    "@types/jsonwebtoken": "^9.0.5",
-    "mongoose": "^8.0.3",
-    "react-hook-form": "^7.48.2",
-    "lucide-react": "^0.294.0",
-    "recharts": "^2.8.0",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.0.0",
-    "tailwind-merge": "^2.0.0"
+    "next": "15.0.3",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "typescript": "5.6.3",
+    "@types/node": "22.9.0",
+    "@types/react": "18.3.12",
+    "@types/react-dom": "18.3.1",
+    "tailwindcss": "3.4.14",
+    "autoprefixer": "10.4.20",
+    "postcss": "8.4.49",
+    "bcryptjs": "2.4.3",
+    "@types/bcryptjs": "2.4.6",
+    "jsonwebtoken": "9.0.2",
+    "@types/jsonwebtoken": "9.0.7",
+    "pg": "8.13.1",
+    "@types/pg": "8.11.10",
+    "react-hook-form": "7.53.2",
+    "lucide-react": "0.460.0",
+    "recharts": "2.13.3",
+    "class-variance-authority": "0.7.1",
+    "clsx": "2.1.1",
+    "tailwind-merge": "2.5.4",
+    "dotenv": "16.4.5"
   },
   "devDependencies": {
-    "eslint": "^8",
-    "eslint-config-next": "14.0.4"
+    "eslint": "9.15.0",
+    "eslint-config-next": "15.0.3",
+    "@types/eslint": "9.6.1"
+  },
+  "overrides": {
+    "micromatch": "4.0.8",
+    "braces": "3.0.3",
+    "ws": "8.18.0",
+    "path-to-regexp": "6.3.0"
   }
 }
