configured pgvector, initialised and verified all databases functionalities

--- a/package.json
+++ b/package.json
@@ -15,38 +15,48 @@
     "setup": "node scripts/setup.js",
     "clean": "rm -rf .next node_modules package-lock.json && npm install",
     "create-admin": "node scripts/create-admin.js",
-    "init-quiz": "node scripts/init-quiz-tables.js"
+    "init-quiz": "node scripts/init-quiz-tables.js",
+    "init-rag": "node scripts/init-rag-db.js",
+    "test": "vitest --run",
+    "test:watch": "vitest",
+    "docker:start": "powershell -ExecutionPolicy Bypass -File ./scripts/docker-db.ps1 start",
+    "docker:stop": "powershell -ExecutionPolicy Bypass -File ./scripts/docker-db.ps1 stop",
+    "docker:status": "powershell -ExecutionPolicy Bypass -File ./scripts/docker-db.ps1 status",
+    "docker:logs": "powershell -ExecutionPolicy Bypass -File ./scripts/docker-db.ps1 logs",
+    "docker:reset": "powershell -ExecutionPolicy Bypass -File ./scripts/docker-db.ps1 reset"
   },
   "dependencies": {
-    "next": "15.0.3",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
-    "typescript": "5.6.3",
+    "@google/generative-ai": "^0.21.0",
+    "@types/bcryptjs": "2.4.6",
+    "@types/jsonwebtoken": "9.0.7",
     "@types/node": "22.9.0",
+    "@types/pg": "8.11.10",
     "@types/react": "18.3.12",
     "@types/react-dom": "18.3.1",
-    "tailwindcss": "3.4.14",
     "autoprefixer": "10.4.20",
-    "postcss": "8.4.49",
     "bcryptjs": "2.4.3",
-    "@types/bcryptjs": "2.4.6",
-    "jsonwebtoken": "9.0.2",
-    "@types/jsonwebtoken": "9.0.7",
-    "pg": "8.13.1",
-    "@types/pg": "8.11.10",
-    "react-hook-form": "7.53.2",
-    "lucide-react": "0.460.0",
-    "recharts": "2.13.3",
     "class-variance-authority": "0.7.1",
     "clsx": "2.1.1",
-    "tailwind-merge": "2.5.4",
     "dotenv": "16.4.5",
-    "@google/generative-ai": "^0.21.0"
+    "jsonwebtoken": "9.0.2",
+    "lucide-react": "0.460.0",
+    "next": "15.0.3",
+    "pdf-parse": "^2.4.5",
+    "pg": "8.13.1",
+    "postcss": "8.4.49",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "react-hook-form": "7.53.2",
+    "recharts": "2.13.3",
+    "tailwind-merge": "2.5.4",
+    "tailwindcss": "3.4.14",
+    "typescript": "5.6.3"
   },
   "devDependencies": {
+    "@types/eslint": "9.6.1",
     "eslint": "9.15.0",
     "eslint-config-next": "15.0.3",
-    "@types/eslint": "9.6.1"
+    "vitest": "^1.0.4"
   },
   "overrides": {
     "micromatch": "4.0.8",
