--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@types/eslint": "9.6.1",
     "eslint": "9.15.0",
     "eslint-config-next": "15.0.3",
+    "fast-check": "^4.5.3",
     "vitest": "^1.0.4"
   },
   "overrides": {
