--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@types/pg": "8.11.10",
     "@types/react": "18.3.12",
     "@types/react-dom": "18.3.1",
+    "@xenova/transformers": "^2.17.2",
     "autoprefixer": "10.4.20",
     "bcryptjs": "2.4.3",
     "class-variance-authority": "0.7.1",
