--- a/package.json
+++ b/package.json
@@ -54,10 +54,12 @@
     "recharts": "2.13.3",
     "tailwind-merge": "2.5.4",
     "tailwindcss": "3.4.14",
-    "typescript": "5.6.3"
+    "typescript": "5.6.3",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "@types/eslint": "9.6.1",
+    "@types/uuid": "^10.0.0",
     "eslint": "9.15.0",
     "eslint-config-next": "15.0.3",
     "fast-check": "^4.5.3",
