--- a/package.json
+++ b/package.json
@@ -58,11 +58,17 @@
     "uuid": "^13.0.0"
   },
   "devDependencies": {
+    "@testing-library/dom": "^10.4.1",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.2",
+    "@testing-library/user-event": "^14.6.1",
     "@types/eslint": "9.6.1",
     "@types/uuid": "^10.0.0",
+    "@vitejs/plugin-react": "^5.1.4",
     "eslint": "9.15.0",
     "eslint-config-next": "15.0.3",
     "fast-check": "^4.5.3",
+    "jsdom": "^28.1.0",
     "tsx": "^4.21.0",
     "vitest": "^1.0.4"
   },
