--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,6 @@
 {
-  "buildCommand": "npm install --legacy-peer-deps && npm run build",
-  "installCommand": "npm install --legacy-peer-deps"
+  "installCommand": "npm install --legacy-peer-deps",
+  "env": {
+    "SKIP_ENV_VALIDATION": "1"
+  }
 }
